--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ body{
     margin-bottom: 20px;
     font-size: 28px;
     /* 114p */
-    background-image: url("../images/h2_icon.png"); /* 배경 이미지 */
+    background-image: url("/finalpage/images/h2_icon.png"); /* 배경 이미지 */
     background-repeat: no-repeat ; /* 여백에 채우기    no-repeat[채우기안함] */
     background-position: left bottom; /* 왼쪽 아래 */
     padding: 20px 10px 10px 48px; /* 여백 */
